--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
 
-name: Maven Package
+name: Build
 
 on:
   workflow_dispatch:
@@ -15,20 +15,5 @@ jobs:
       packages: write
 
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-java@v4.2.1
-      with:
-        java-version: '21'
-        distribution: 'oracle'
-        cache: maven
-
     - name: Build our Project
       run: javac com/crate/Main.java
-    
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
