--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,8 @@ jobs:
 
     runs-on: ubuntu-latest
     permissions:
-      contents: read; write
+      contents: read
+      packages: write
 
     steps:
     - name: Build our Project
