--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,5 +12,6 @@ jobs:
       packages: write
 
     steps:
+    - uses: actions/checkout@v4.1.5
     - name: Build our Project
       run: bash compile.sh
