--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,12 +5,10 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
     permissions:
-      contents: read
-      packages: write
-
+      contents: write
+  
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4.1.5
     - name: Build our Project
