--- a/.github/workflows/cbuild.yml
+++ b/.github/workflows/cbuild.yml
@@ -7,6 +7,9 @@ jobs:
   build_c:
     name: build c project
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
     
     steps:
     - uses: actions/checkout@v4
