--- a/.github/workflows/cbuild.yml
+++ b/.github/workflows/cbuild.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build Our Project
       run: |
-        gcc crate/main.c -o crate/crate.out
+        bash compile.sh
 
     - name: Commit Project
       uses: EndBug/add-and-commit@v9.1.4
