--- a/.github/workflows/cbuild.yml
+++ b/.github/workflows/cbuild.yml
@@ -1,11 +1,11 @@
-name: C Project Build
+name: C++ Project Build
 
 on:
   workflow_dispatch:
 
 jobs:
   build_c:
-    name: build c project
+    name: build c++ project
     runs-on: ubuntu-latest
 
     permissions:
