--- a/.github/workflows/clear_runs.yml
+++ b/.github/workflows/clear_runs.yml
@@ -10,8 +10,6 @@ jobs:
     steps:
     - name: Delete workflow runs
       uses: dmvict/clean-workflow-runs@v1.0.0
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       with:
-        token: GITHUB_TOKEN
+        token: ${{secrets.GITHUB_TOKEN}}
         save_min_runs_number: 1
