--- a/.github/workflows/cbuild.yml
+++ b/.github/workflows/cbuild.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write
+      contents: read write
     
     steps:
     - uses: actions/checkout@v4
