--- a/.github/workflows/cbuild.yml
+++ b/.github/workflows/cbuild.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read write
+      contents: write
     
     steps:
     - uses: actions/checkout@v4
@@ -24,6 +24,7 @@ jobs:
     - name: Commit Project
       uses: EndBug/add-and-commit@v9.1.4
       with:
+        permissions: read
         author_name: Silas Wrinker
         author_email: alcosojr79@gmail.com
         message: Built project
