--- a/.github/workflows/cbuild.yml
+++ b/.github/workflows/cbuild.yml
@@ -27,5 +27,5 @@ jobs:
         author_name: Silas Wrinker
         author_email: alcosojr79@gmail.com
         message: Built project
-        pull: true
-        push: true
+        pull: false
+        push: false
