--- a/.github/workflows/cppbuild.yml
+++ b/.github/workflows/cppbuild.yml
@@ -22,6 +22,6 @@ jobs:
         bash compile.sh
 
     - name: Commit Project
-      uses: stefanzweifel/c@v4
+      uses: stefanzweifel/git-auto-commit-action@v5.0.1
       with:
         commit_message: "Built project"
